stripped everything but StarDust library

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+#Start StarDust
+
+Robot.h
+
+#End StarDust
+
 # Created by https://www.gitignore.io/api/c++,java,linux,macos,gradle,windows,visualstudiocode
 
 ### C++ ###
@@ -155,6 +161,5 @@ gradle-app.setting
 .project
 .settings/
 bin/
-
 
 # End of https://www.gitignore.io/api/c++,java,linux,macos,gradle,windows,visualstudiocode
