--- a/.gitignore
+++ b/.gitignore
@@ -163,3 +163,6 @@ gradle-app.setting
 bin/
 
 # End of https://www.gitignore.io/api/c++,java,linux,macos,gradle,windows,visualstudiocode
+
+#prevents .swp files from being added
+*.swp
